issue when one element left in the collaps delete

--- a/web/styles.css
+++ b/web/styles.css
@@ -93,7 +93,7 @@
   }
 .paperdeleteButton{
   margin-left: 1.5px;
-  margin-bottom: 14px;
+  margin-bottom: 20px;
   display:inline-block;
     background-color: #ededed;
     color: #6b6b6b;
